# win32api-concept

./: CMakeLists.txt  MainWindow.hpp  README.md  main.cpp  main_com.cpp  main_oop.cpp
src/graphic/: main.cpp  main_window.hpp
src/input/: base_window.hpp  cpi_scale.hpp  main_window.hpp
src/painter/: base_window.hpp  dpi_scale.hpp  input.rc  main.cpp  main_window.hpp  my_ellipse.hpp  resource.h
